# IP-Management

./: .env.example  DOCKER_REBUILD_GUIDE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.simple  FRONTEND_FIXES_SUMMARY.md  FRONTEND_REVAMP_SUMMARY.md  LICENSE  README.md  README2.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.kiro/specs/frontend-interface/: design.md  requirements.md  tasks.md
.kiro/specs/ip-vlan-management/: design.md  installation.md  requirements.md  tasks.md
.kiro/steering/: Requirements.md  product.md  structure.md  tech.md
alembic/: env.py
frontend/: .env.example  .env.local  .eslintrc.json  Dockerfile.frontend  Dockerfile.simple  README.md  SETUP_GUIDE.md  docker-entrypoint.sh  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Dashboard.tsx  DeviceManagement.tsx  DomainForm.tsx  DomainManagement.tsx  DomainVLANPanel.tsx  DomainVlanView.tsx  EnhancedAnalytics.tsx  (+10 more)
frontend/static/: index.html
nginx/: nginx.conf
scripts/: clear-database.py  docker-dev-setup.ps1  docker-dev-setup.sh  docker-init-sample-data.py  init-db.sql  init-sample-data.py  live_test_runner.py  run_dev.py  run_tests.py  serve_dashboard.py
src/ip_management/: __init__.py
tests/: conftest.py  test_api_endpoints.py  test_domain_service.py  test_frontend_components.py  test_ip_calculator.py  test_vlan_service.py
(+49 files in other folders)
